    formatting

  * Reverted changes to cslog module and how the checker queue process works

  * Logs now store information about file uploads in a more intuitive format

  * cs_upload_management returns as a way to control where uploaded files are
    stored (directly in the database, or as separate files)

  * Changed the location of the default remote sandbox for running Python code

DEPRECATED:

REMOVED:

  * Removed PostgreSQL as a logging mechanism

FIXED:

  * Fixed issue with reporter websocket connection being lost frequently

  * Fixed a crash related to multiprocessing on MacOS with Python 3.8

  * Fixed an issue with rendering inline code blocks split across multiple
    lines of Markdown

  * Attempted fix for rendering of the catsoop logo in the footer on
    iOS/Safari

SECURITY:

  * Logs are now encrypted by default

  * Remove information about the Python version from the default footer

DOCUMENTATION:


####################
# Version 2021.2.0 #
####################

ADDED:

  * Added information about the Python version to the default footer

  * Added ability to easily change the Javascript callback functions invoked
    after taking an action using the built-in action buttons

  * Javascript callback functions now take a second parameter, the name(s) of
    the question(s) that were affected by the action

FIXED:

  * Fixed the color of the "callout" box for the checking queue

  * Fixed broken tutor.read_checker_result

  * Updated the "cert" auth type to work with NGINX

SECURITY:

  * Fixed an XSS vulnerability in the default handler


####################
# Version 2020.9.0 #
####################

ADDED:

  * Added ability to conditionally show or hide HTML elements via the
    'cs-show-if' and 'cs-hide-if' attributes

  * Added support for showing line numbers next to code snippets by adding
    '-lines' to the end of the language specified for a code block

  * Added ability to avoid running children's preloads into cs_children, by